--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 
         <nav id="categories" class="flex justify-center gap-4 mt-4"></nav>
         <main>
-            <section id="videos">
+            <section 
+            id="videos"
+            class="w-11/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 py-10">
+
 
             </section>
         </main>
